@@ -34,7 +34,7 @@ AC_SUBST(CONFIGDIR)
 PACKAGE=tls
 
 MAJOR_VERSION=1
-MINOR_VERSION=3
+MINOR_VERSION=4
 PATCHLEVEL=
 
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}${PATCHLEVEL}
