@@ -1,3 +1,8 @@
+2000-07-17  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* pkgIndex.tcl.in:
+	* configure.in: updated version to 1.4
+
 2000-07-13  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* tests/tlsIO.test: enabled tests 2.10, 7.[1245] (there is no 3),
